--- a/index.html
+++ b/index.html
@@ -4,10 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technology</title>
-</head>
-<body>
-    <h1><h1>
+    <link rel="stylesheet" href="style.css">
 
-    </h1>    
+
+</head>
 </body>
 </html>
+<main>
+      <aside class="fluid">
+        <div class="border">
+          <div class="trail"></div>
+        </div>
+        <div class="content">
+          <p>
+            <body>
+    <h1>O que é HTML e para que serve?</h1>
+        <p><i>Hyper Text Markup Language</i>,em português chamada de <i>Linguagem de Marcação de Hipertexto</i> é a estruturação de uma página na web, onde, a escrita, imagens, links são criados nela, podendo ser utilizados na web. Ela se tornou a base de qualquer site de web, podendo ser decifrado pelos navegadores e exibir as informações de maneira visual para o usuário, o HTML é uma das linguagens de tecnologia principais do World Wide Web famoso www.</p>
+
+    <h1>O que é CSS e para que serve?</h1>
+        <p> <em>Cascading Style Sheets</em>, em português chamada de <em>Folhas de Estilo em Cascata</em>, é uma linguagem de estilização que é  utilizada para a aparência visual dos elementos da página, como cores, fontes, espaçamento e layout. É a parte de deixar "bonito" mais organizado o navegador, deixa ele mais "limpo". O CSS é também é uma das principais para a Word Wide Web.</p>
+
+    <h1>O que é JAVASCRIPT e para que serve?</h1>
+        <p>JavaScript (frequentemente abreviado como JS), linguagem de programação utilizada na web que faz a interatividade do site, faz com o que o usuário possa interagir com o site de forma dinâmica e responsivo. Js faz com que um site faça sentido, que cause bastante impacto para o site.</p>
+
+    <h1>O que é REACT e para que serve?</h1>
+        <p>a</p>
+
+    <h1>O que é REACT NATIVE e para que serve?</h1>
+        <p></p>
+
+    <h1>O que é GITHUB e para que serve?</h1>
+        <p></p>
+
+    <h1>O que é VITE e para que serve?</h1>
+        <p></p>
+
+    <h1>O que é EXPO REACT NATIVE e para que serve?</h1>
+        <p></p>
+
+    <h1>O que é Node_modules e para que serve?</h1>
+        <p></p>
+
+    <h1>Quais os impactos positivos e negativos para você? A IA vem com consendo nos tempos modernos</h1>
+        <p></p>
+      
+        </body>
