--- a/index.html
+++ b/index.html
@@ -47,5 +47,8 @@
 
     <h1>Quais os impactos positivos e negativos para você? A IA vem com consendo nos tempos modernos</h1>
         <p></p>
+
+
+        <h1> Criadores das Tecnologias</h1>
       
         </body>
