--- a/index.html
+++ b/index.html
@@ -11,13 +11,8 @@
 </body>
 </html>
 <main>
-      <aside class="fluid">
-        <div class="border">
-          <div class="trail"></div>
-        </div>
-        <div class="content">
-          <p>
-            <body>
+      
+
     <h1>O que é HTML e para que serve?</h1>
         <p><i>Hyper Text Markup Language</i>,em português chamada de <i>Linguagem de Marcação de Hipertexto</i> é a estruturação de uma página na web, onde, a escrita, imagens, links são criados nela, podendo ser utilizados na web. Ela se tornou a base de qualquer site de web, podendo ser decifrado pelos navegadores e exibir as informações de maneira visual para o usuário, o HTML é uma das linguagens de tecnologia principais do World Wide Web famoso www.</p>
 
@@ -28,27 +23,25 @@
         <p>JavaScript (frequentemente abreviado como JS), linguagem de programação utilizada na web que faz a interatividade do site, faz com o que o usuário possa interagir com o site de forma dinâmica e responsivo. Js faz com que um site faça sentido, que cause bastante impacto para o site.</p>
 
     <h1>O que é REACT e para que serve?</h1>
-        <p>a</p>
+        <p>React é uma biblioteca do JavaScript que foi criada pelo Facebook. Ela é utilizada para construir interfaces de usuário, especialmente para aplicações web de página única (Single Page Applications - SPA). O React permite criar componentes reutilizáveis, facilitando o desenvolvimento e a manutenção do código.
+        </p>
 
     <h1>O que é REACT NATIVE e para que serve?</h1>
-        <p></p>
+        <p>React Native é uma biblioteca do JavaScript que permite criar aplicações móveis nativas usando React. Ela permite desenvolver aplicativos para iOS e Android com uma única base de código, facilitando o desenvolvimento e a manutenção.</p>
 
     <h1>O que é GITHUB e para que serve?</h1>
-        <p></p>
+        <p>Github é uma plataforma de hospedagem de código que permite colaborar em projetos de software e controlar versões e gerenciar repositórios no Git.</p>
 
     <h1>O que é VITE e para que serve?</h1>
-        <p></p>
+        <p><em>Vite</em> é uma ferramenta de desenvolvimento web que oferece um ambiente de desenvolvimento rápido e eficiente para aplicações modernas, utilizando tecnologias como ES modules e HMR (Hot Module Replacement).</p>
 
     <h1>O que é EXPO REACT NATIVE e para que serve?</h1>
-        <p></p>
+        <p><em>Expo React Native</em> é um plataforma que facilita bastante o desenvolvimento de aplicativos móveis usando o React Native. Ele elimina a necessidade de configurar ambientes nativos díficeis, já que vem com ferramentas prontas.</p>
 
     <h1>O que é Node_modules e para que serve?</h1>
-        <p></p>
+        <p>Node_modules é a pasta gerada automaticamente pelo Node.js que contém todas dependências instaladas de um projeto. Ela é utilizada para armazenar bibliotecas e módulos necessários para o funcionamento de um projeto, sem ela basicamente não tem como rodar projeto.</p>
 
     <h1>Quais os impactos positivos e negativos para você? A IA vem com consendo nos tempos modernos</h1>
-        <p></p>
+        <p>A IA vem nos ajudando bastante com informações que os usuários inserem, ela nos ajuda a informações e descomplicar problemas. Também temos lados negativos, a IA é uma inteligência artificial que só repete o que foi programado para ela, nem todas as coisas são verdadeiras e também se a pessoa usá-la constantemente, terá dificuldade em pensar, criticar, imaginar entre outras coisas</p>
 
-
-        <h1> Criadores das Tecnologias</h1>
-      
         </body>
