--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
         <p> <em>Cascading Style Sheets</em>, em português chamada de <em>Folhas de Estilo em Cascata</em>, é uma linguagem de estilização que é  utilizada para a aparência visual dos elementos da página, como cores, fontes, espaçamento e layout. É a parte de deixar "bonito" mais organizado o navegador, deixa ele mais "limpo". O CSS é também é uma das principais para a Word Wide Web.</p>
 
     <h1>O que é JAVASCRIPT e para que serve?</h1>
-        <p>JavaScript (frequentemente abreviado como JS), linguagem de programação utilizada na web que faz a interatividade do site, faz com o que o usuário possa interagir com o site de forma dinâmica e responsivo. Js faz com que um site faça sentido, que cause bastante impacto para o site.</p>
+        <p><em>JavaScript </em> (frequentemente abreviado como JS), linguagem de programação utilizada na web que faz a interação do site, faz com o que o usuário possa interagir com o site de forma dinâmica e responsiva. Js faz com que um site faça sentido, que cause bastante impacto para o site.</p>
 
     <h1>O que é REACT e para que serve?</h1>
-        <p>React é uma biblioteca do JavaScript que foi criada pelo Facebook. Ela é utilizada para construir interfaces de usuário, especialmente para aplicações web de página única (Single Page Applications - SPA). O React permite criar componentes reutilizáveis, facilitando o desenvolvimento e a manutenção do código.
+        <p><em> React </em> é uma biblioteca do JavaScript que foi criada pelo famoso Facebook. Ela é utilizada para construir interfaces de usuário e especialmente para aplicações web de página úniuca. O React permite criar componentes reutilizáveis, assim facilitando o desenvolvimento e a manutenção do código.
         </p>
 
     <h1>O que é REACT NATIVE e para que serve?</h1>
-        <p>React Native é uma biblioteca do JavaScript que permite criar aplicações móveis nativas usando React. Ela permite desenvolver aplicativos para iOS e Android com uma única base de código, facilitando o desenvolvimento e a manutenção.</p>
+        <p></em>React Native</em> é uma biblioteca do JavaScript que permite criar aplicações móveis nativas usando React. Ela permite desenvolver aplicativos para iOS e Android com uma única base de código, facilitando o desenvolvimento e a manutenção.</p>
 
     <h1>O que é GITHUB e para que serve?</h1>
-        <p>Github é uma plataforma de hospedagem de código que permite colaborar em projetos de software e controlar versões e gerenciar repositórios no Git.</p>
+        <p><em>Github</em> é uma plataforma de hospedagem de código que permite colaborar em projetos de software e controlar versões e gerenciar repositórios no Git.</p>
 
     <h1>O que é VITE e para que serve?</h1>
-        <p><em>Vite</em> é uma ferramenta de desenvolvimento web que oferece um ambiente de desenvolvimento rápido e eficiente para aplicações modernas, utilizando tecnologias como ES modules e HMR (Hot Module Replacement).</p>
+        <p><em>Vite</em> é uma ferramenta de desenvolvimento web que oferece um ambiente de desenvolvimento rápido e eficiente para aplicações modernas, usamos o vite como um framework e também é bastante utilizade para frontend já que é rapida e facilita o desenvolvimento .</p>
 
     <h1>O que é EXPO REACT NATIVE e para que serve?</h1>
-        <p><em>Expo React Native</em> é um plataforma que facilita bastante o desenvolvimento de aplicativos móveis usando o React Native. Ele elimina a necessidade de configurar ambientes nativos díficeis, já que vem com ferramentas prontas.</p>
+        <p><em>Expo React Native</em> é um plataforma que facilita bastante o desenvolvimento de aplicativos moveis usando o React Native. Ela exlcui a necessidade de configurar ambientes nativos díficeis, já que vem com ferramentas prontas e ajuda basntate.</p>
 
     <h1>O que é Node_modules e para que serve?</h1>
         <p>Node_modules é a pasta gerada automaticamente pelo Node.js que contém todas dependências instaladas de um projeto. Ela é utilizada para armazenar bibliotecas e módulos necessários para o funcionamento de um projeto, sem ela basicamente não tem como rodar projeto.</p>
